<resources>
    <string name="app_name">SegundoParcial</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="noticias_generales">Noticias Generales</string>
    <string name="ajustes">Ajustes</string>
    <string name="favoritos">Favoritos</string>
    <string name="openDrawer">Open navigation Drawer</string>
    <string name="closeDrawer">Close navigation Drawer</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
</resources>
