<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_noticias_generales"
            android:title="@string/noticias_generales"
            />

        <item
            android:id="@+id/menu_juegos"
            android:title="Juegos"
            android:icon="@drawable/ic_menu_white_24dp"/>

    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/menu_ajustes"
                android:title="@string/ajustes"
                />

            <item
                android:id="@+id/menu_favoritos"
                android:title="@string/favoritos"
                />
        </menu>

    </item>
</menu>