<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ajustes_imagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@drawable/ic_launcher_background" 
        android:layout_margin="12dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#000"
        android:text="@string/usuario"
        android:enabled="false"
        />
    <EditText
        android:id="@+id/ajustes_usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/contrase_a"
        android:enabled="false"
        android:textColor="#000"
        />
    <EditText
        android:id="@+id/ajustes_contra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:textColor="#000"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/nueva_contrase_a"
        android:enabled="false"
        android:textColor="#000"
        />
    <EditText
        android:id="@+id/ajustes_nuevacontra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/ajustes_boton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:enabled="false"
        android:text="@string/guardar"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#000"
        />


</LinearLayout>